--- a/src/components/messageList/style.scss
+++ b/src/components/messageList/style.scss
@@ -1,10 +1,8 @@
 .message-list {
-  flex-grow: 1;
+  flex: 1 0 1px;
   background-color: #eff1f5;
   border-top-right-radius: 0;
   box-sizing: border-box;
-  min-height: 300px;
-  max-height: 500px;
   overflow-y: auto;
   padding: 0 20px;
 
@@ -22,14 +20,13 @@
   }
 
   &::-webkit-scrollbar-track {
-    box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
     border-top-right-radius: 0;
   }
 
   &::-webkit-scrollbar-thumb {
-    background-color: #4ccc70;
-    border-top-right-radius: 0;
-    outline: 1px solid slategrey;
+    background-color: rgba($color: #4ccc70, $alpha: 0.7);
+    border-radius: 10px;
+    border: 4px solid #eff1f5;
   }
 }
 
