--- a/src/components/newRoomForm/style.scss
+++ b/src/components/newRoomForm/style.scss
@@ -16,7 +16,15 @@
       margin: 10px 0;
       padding: 0 5px;
       outline: none;
-      width: 80%;
+      width: 60%;
+    }
+
+    button {
+      background: none;
+      border: none;
+      color: #ffffff;
+      font-size: 22px;
+      outline: none;
     }
   }
 
