--- a/src/components/sendMessageForm/style.scss
+++ b/src/components/sendMessageForm/style.scss
@@ -16,6 +16,14 @@
     outline: none;
     width: 80%;
   }
+
+  button {
+    background: none;
+    border: none;
+    color: #4ccc70;
+    font-size: 22px;
+    outline: none;
+  }
 }
 
 @media screen and (max-width: 768px) {
